# funny-numbers

src/cpp/: CMakeLists.txt  Makefile  cpu_posit_gemv.cc  cuda_posit_gemv.cu  cuda_posit_math.cuh  packed_posit.h  posit.cc  posit.h  posit_gemv.h  posit_test.cc
src/python/: posit.py  posit_test.py
